<resources>
    <string name="app_name">Huelllitas</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="login_subtitle">Para iniciar sesión, ingresa los siguientes datos</string>
    <string name="login_buton">Ingresar</string>
    <string name="edit_profile">Perfil</string>
    <string name="orders">Pedidos</string>
    <string name="logout">Cerrar sesión</string>
    <string name="home">Inicio</string>
    <string name="shopping_cart">Carrito de compras</string>
    <string name="profile">Perfil</string>
    <string name="register_title">Registro</string>
    <string name="register_subtitle">Para registrarte ingresa los siguientes datos</string>
    <string name="name_label">Nombre</string>
    <string name="email_label">Correo electrónico</string>
    <string name="dont_have_account">¿No tienes cuenta? Haz click aquí</string>
    <string name="alredy_have_account">¿Ya tienes una cuenta?</string>
    <string name="password_label">Contraseña</string>
    <string name="register_buton">Crear cuenta</string>
    <string name="Google_label">Google</string>
    <string name="Facebook_label">Facebook</string>
    <string name="o_label">o</string>
    <string name="forgot_password">Contraseña olvidada</string>
    <string name="password_recovery_title">Contraseña olvidada</string>
    <string name="password_recovery_subtitle">Por favor ingresa tu correo electrónico para recuperar tu contraseña</string>
    <string name="password_recovery_button">Enviar correo</string>
    <string name="back_button_description">Volver</string>
    <string name="lastName_label">Apellido</string>
    <string name="address_label">Dirección</string>
    <string name="featured">Recomendado</string>
    <string name="see_all">Ver todo</string>
    <string name="back">Atras</string>
    <string name="editProfile">Editar perfil</string>
    <string name="profile_image_desc">imagen del perfil</string>
    <string name="imageProfile">Imagen del perfil\n</string>
    <string name="product_image_desc">Descripcion del producto</string>
    <string name="add_to_favorites">Añadir a favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text">Inicio</string>
</resources>
