<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">


        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@mipmap/logo_huellitas" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            style="@style/TitleText"/>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleText"
            android:text="@string/login_title" />

        <TextView
            android:id="@+id/txtSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/SubtitleText"
            android:text="@string/login_subtitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnFacebook"
                style="@style/SocialButton"
                android:text="@string/Facebook_label"
                android:drawableLeft="@drawable/icon_facebook"/>

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnGoogle"
                style="@style/SocialButton"
                android:text="@string/Google_label"
                android:drawableLeft="@drawable/icon_google"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#E0E0E0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o_label"
                android:textSize="14sp"
                android:textColor="#808080"
                android:padding="8dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#E0E0E0" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/InputField"
            android:layout_marginTop="20dp"
            android:hint="@string/email_label"
            android:text=""
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/InputField"
            android:layout_marginTop="12dp"
            android:hint="@string/password_label"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/txtForgotPassword"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonLogin"
            style="@style/PrimaryButton"
            android:text="@string/login_buton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/dont_have_account"
            android:textColor="#000000"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>
