<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/back_button_description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="56dp"> <!-- deja espacio para el botón -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleText"
                android:text="@string/password_recovery_title" />

            <TextView
                android:id="@+id/txtSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/SubtitleText"
                android:text="@string/password_recovery_subtitle"/>

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/InputField"
                android:layout_marginTop="20dp"
                android:hint="@string/email_label"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/buttonLogin"
                style="@style/PrimaryButton"
                android:text="@string/password_recovery_button"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
