<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Botón de atras -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/back"
            android:background="@drawable/ic_atras"
            android:backgroundTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profileImageCard"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="60dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_image"
                android:contentDescription="@string/profile_image_desc" />

        </androidx.cardview.widget.CardView>


        <!-- Card del formulario -->
        <androidx.cardview.widget.CardView
            android:id="@+id/formCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImageCard">

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="96dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#E0E0E0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/profile"
                    android:textColor="@color/primary"
                    android:textSize="28sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#E0E0E0" />


                <EditText
                    android:id="@+id/editName"
                    style="@style/InputField"
                    android:layout_marginTop="20dp"
                    android:hint="@string/name_label"
                    android:text=""
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/editLastName"
                    style="@style/InputField"
                    android:layout_marginTop="20dp"
                    android:hint="@string/lastName_label"
                    android:text=""
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/editAddress"
                    style="@style/InputField"
                    android:layout_marginTop="20dp"
                    android:hint="@string/address_label"
                    android:text=""
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/editEmail"
                    style="@style/InputField"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email_label"
                    android:text=""
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/editPassword"
                    style="@style/InputField"
                    android:layout_marginTop="12dp"
                    android:hint="@string/password_label"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <Button
                android:id="@+id/buttonLogin"
                style="@style/PrimaryButton"
                android:text="@string/editProfile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/alredy_have_account"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

